# COSIDIA

./: .gitignore  .gitmodules  CMakeLists.txt  doxyconfig  readme.md
cmake/: Findjemalloc.cmake
evaluationTools/: boxplot.py
scenarios/ingolstadtNorth/: ingolstadt-north.rou-self.xml
src/actionData/: AccessInterfaceActionData.hpp  ActionData.hpp  ParesisAccessInterfaceActionData.hpp  VehicleUpdateActionData.hpp
src/application/: CaService.cpp  CaService.hpp  InternalCaService.cpp  InternalCaService.hpp  ServiceActionData.hpp
src/core/: Action.cpp  Action.hpp  ActionData.hpp  ActionHandler.cpp  ActionHandler.hpp  ActionList.cpp  ActionList.hpp  ActionStateMachine.cpp  ActionStateMachine.hpp  Clock.cpp  Clock.hpp  Config.cpp  Config.hpp  Core.cpp  Core.hpp  DebugClock.cpp  DebugClock.hpp  DurationAction.cpp  DurationAction.hpp  InitAction.cpp  InitAction.hpp  ObjectList.cpp  ObjectList.hpp  SteadyClock.cpp  SteadyClock.hpp  Symbol.cpp  Symbol.hpp  main.cpp
src/debug/: DebugAction.hpp  DebugObject.cpp  DebugObject.hpp
src/fiber/: customWorkStealing.cpp  customWorkStealing.hpp
src/guiConnector/: GuiConnector.cpp  GuiConnector.hpp  gui.hpp  guiMsg.proto
src/mobility/: BaseVehicleUpdater.cpp  BaseVehicleUpdater.hpp  MobilityManager.cpp  MobilityManager.hpp  SumoMobilityManager.cpp  SumoMobilityManager.hpp  SumoUpdater.cpp  SumoUpdater.hpp
src/networking/: AccessInterface.cpp  AccessInterface.hpp  ActiveActionTracker.cpp  ActiveActionTracker.hpp  DccPassThrough.hpp  ParesisAccessInterface.cpp  ParesisAccessInterface.hpp  ParesisDccPassThrough.hpp  ParesisPositionProvider.cpp  ParesisPositionProvider.hpp  ParesisRouter.cpp  ParesisRouter.hpp  ParesisRuntime.cpp  ParesisRuntime.hpp  PositionProvider.cpp  PositionProvider.hpp  Router.cpp  Router.hpp  Runtime.cpp  Runtime.hpp  VanetzaDefs.hpp
src/objects/: ActionHistory.cpp  ActionHistory.hpp  BaseObject.cpp  BaseObject.hpp  CacheQuery.cpp  CacheQuery.hpp  ObjectActionManager.cpp  ObjectActionManager.hpp  ObjectCache.cpp  ObjectCache.hpp  ObjectContext.hpp  ObjectFactory.cpp  ObjectFactory.hpp  ObjectId.hpp  ObjectList.cpp  ObjectList.hpp  ObjectRemover.cpp  ObjectRemover.hpp  SimulationManager.cpp  SimulationManager.hpp  SimulationStarter.cpp  SimulationStarter.hpp  TemporaryObject.cpp  TemporaryObject.hpp  VehicleObject.cpp  VehicleObject.hpp
src/output/: SqliteBackend.cpp  SqliteBackend.hpp  TimingScope.cpp  TimingScope.hpp
src/radio/: InterferenceDecider.cpp  InterferenceDecider.hpp  MediumAccess.cpp  MediumAccess.hpp  Microchannel.cpp  Microchannel.hpp  MicrochannelContext.hpp  PhysicalDecider.cpp  PhysicalDecider.hpp  Radio.cpp  Radio.hpp  RadioDecider.hpp  Transmission.cpp  Transmission.hpp  fwd.hpp
src/tests/unitTests/: ActionListTest.cpp  BaseObjectTest.cpp  CMakeLists.txt  ObjectActionManagerTest.cpp  ObjectCacheTest.cpp  ObjectListTest.cpp  ParesisRuntimeTest.cpp  RuntimeTest.cpp
src/traci/: API.cpp  API.h  Angle.cc  Angle.h  CMakeLists.txt  Position.cc  Position.h  PosixLauncher.cpp  PosixLauncher.h  Time.h
src/utils/: AnyMap.hpp  ContextContainer.hpp  Geometry.cc  Geometry.h  PureLocal.hpp  ReadOnly.hpp  enforce.hpp  invariant.hpp
